--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,53 @@
-node_modules
-dist
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build artifacts
+dist/
+build/
+out/
+.next/
+.serverless/
+.output/
+*.tsbuildinfo
+
+# Test/Coverage
+coverage/
+.nyc_output/
+test-results/
+playwright-report/
+blob-report/
+videorecorder/
+trace/
+*.lcov
+
+# Secrets & Environment
 .env
+.env.*
+!.env.example
+.env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs & System
+.vscode/
+.idea/
+*.swp
+*.swo
 .DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+logs/
 *.log
-coverage
-build
-.eslintcache
+
+# Misc
+.cache/
+.parcel-cache/
+.pnpm-store/
