--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       ],
       "@ais/material/*": [
         "../ais-frontend-common/src/material/*"
+      ],
+      "@ais/common/*": [
+        "../ais-frontend-common/src/components/*"
       ]
     }
   },
